# video-editor

./: README.md  ROADMAP.md  package-lock.json  package.json  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: release.yml
scripts/: setup-python-bundle.ps1
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/binaries/ffmpeg/: README.md
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  types.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/ffmpeg/: mod.rs
src-tauri/src/jobs/: mod.rs
src-tauri/src/presets/: mod.rs
src-tauri/src/whisper/: mod.rs
src/components/: SplashScreen.tsx  UpdateBanner.tsx
src/components/dashboard/: DropZone.tsx  JobCard.tsx  JobQueue.tsx  QueueToolbar.tsx  VideoPlayer.tsx
src/components/layout/: AppLayout.tsx  MainPanel.tsx  Sidebar.tsx  TitleBar.tsx
src/components/settings/: AudioSettings.tsx  CaptionSettings.tsx  OverlaySettings.tsx  PresetManager.tsx  RenderSettings.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  progress.tsx  select.tsx  slider.tsx  switch.tsx
src/hooks/: useTauri.ts  useUpdater.ts
src/types/: index.ts
